project_parser.output
Nonterminals useless in grammar

   subroutine_end


Terminals unused in grammar

   TK_DIV


Rules useless in grammar

  115 subroutine_end: TK_SEMICOLON


Grammar

    0 $accept: program $end

    1 program: program_header program_declarations program_body program_end

    2 program_header: KW_PROGRAM TK_IDENT TK_SEMICOLON

    3 program_declarations: %empty
    4                     | program_declarations declaring
    5                     | program_declarations subroutines

    6 declaring: types_declaration
    7          | variables_declaration

    8 types_declaration: KW_TYPE program_types

    9 program_types: TK_IDENT TK_EQUAL data_type TK_SEMICOLON
   10              | program_types TK_IDENT TK_EQUAL data_type TK_SEMICOLON

   11 variables_declaration: KW_VAR variables_declaration_body

   12 variables_declaration_body: identifiers TK_COLON data_type TK_SEMICOLON
   13                           | variables_declaration_body identifiers TK_COLON data_type TK_SEMICOLON

   14 identifiers: TK_IDENT
   15            | identifiers TK_COMMA TK_IDENT

   16 subroutines: function
   17            | procedure

   18 function: function_header procedure_declarations procedure_body

   19 function_header: KW_FUNCTION TK_IDENT TK_LPAR subroutine_arguments TK_RPAR TK_COLON data_type TK_SEMICOLON

   20 procedure: procedure_header procedure_declarations procedure_body

   21 procedure_header: KW_PROCEDURE TK_IDENT TK_LPAR subroutine_arguments TK_RPAR TK_SEMICOLON

   22 subroutine_arguments: %empty
   23                     | TK_IDENT TK_COLON data_type
   24                     | subroutine_arguments TK_SEMICOLON TK_IDENT TK_COLON data_type

   25 procedure_declarations: program_declarations

   26 procedure_body: complex_command TK_SEMICOLON

   27 program_body: KW_BEGIN commands KW_END

   28 program_end: TK_POINT

   29 basic_data_type: KW_INTEGER
   30                | KW_BOOLEAN
   31                | KW_CHAR
   32                | KW_REAL

   33 data_type: basic_data_type
   34          | KW_ARRAY brackets KW_OF basic_data_type
   35          | KW_ARRAY KW_OF basic_data_type

   36 brackets: TK_LBRACKET expression TK_RBRACKET
   37         | brackets TK_LBRACKET expression TK_RBRACKET

   38 commands: %empty
   39         | commands command_list

   40 complex_command: KW_BEGIN complex_command_list KW_END

   41 command_list: command
   42             | TK_SEMICOLON command
   43             | TK_SEMICOLON complex_command
   44             | complex_command TK_SEMICOLON

   45 command: assign_command
   46        | special_assign
   47        | if_statement
   48        | for_loop
   49        | while_loop
   50        | label_command
   51        | goto_command
   52        | return_command
   53        | call_subroutine

   54 complex_command_list: %empty
   55                     | complex_command_list command
   56                     | complex_command_list TK_SEMICOLON command

   57 statement_commands: complex_command
   58                   | special_assign

   59 assign_command: TK_IDENT TK_ASSIGN expression

   60 special_assign: KW_RESULT TK_ASSIGN expression

   61 if_statement: KW_IF expression KW_THEN statement_commands
   62             | if_statement KW_ELSE statement_commands

   63 for_loop: KW_FOR TK_IDENT TK_ASSIGN expression KW_TO expression KW_DO statement_commands
   64         | KW_FOR TK_IDENT TK_ASSIGN expression KW_DOWNTO expression KW_DO statement_commands

   65 while_loop: KW_WHILE expression KW_DO statement_commands
   66           | KW_REPEAT statement_commands KW_UNTIL expression

   67 label_command: TK_IDENT TK_COLON statement_commands

   68 goto_command: KW_GOTO TK_IDENT

   69 return_command: KW_RETURN

   70 call_subroutine: default_subroutine
   71                | call_function
   72                | call_procedure

   73 default_subroutine: KW_WRITESTRING TK_LPAR expression TK_RPAR
   74                   | KW_WRITEINTEGER TK_LPAR expression TK_RPAR
   75                   | KW_WRITEREAL TK_LPAR expression TK_RPAR
   76                   | TK_IDENT TK_ASSIGN KW_READSTRING
   77                   | TK_IDENT TK_ASSIGN KW_READINTEGER
   78                   | TK_IDENT TK_ASSIGN KW_READREAL

   79 call_function: TK_IDENT TK_ASSIGN TK_IDENT TK_LPAR call_arguments TK_RPAR
   80              | KW_RESULT TK_ASSIGN TK_IDENT TK_LPAR call_arguments TK_RPAR

   81 call_procedure: TK_IDENT TK_LPAR call_arguments TK_RPAR

   82 call_arguments: %empty
   83               | call_arguments_list

   84 call_arguments_list: TK_IDENT
   85                    | call_arguments_list TK_COMMA TK_IDENT

   86 expression: TK_INT
   87           | TK_REAL
   88           | TK_STRING
   89           | TK_IDENT
   90           | TK_BOOL_TRUE
   91           | TK_BOOL_FALSE
   92           | TK_CHAR
   93           | TK_DIGIT
   94           | TK_PLUS expression
   95           | TK_MINUS expression
   96           | TK_LPAR expression TK_RPAR
   97           | TK_LPAR data_type TK_RPAR TK_IDENT
   98           | mathematics
   99           | compare
  100           | TK_IDENT brackets

  101 mathematics: expression TK_DIVIDE expression
  102            | expression TK_MOD expression
  103            | expression TK_PLUS expression
  104            | expression TK_MINUS expression
  105            | expression TK_MULTIPLY expression
  106            | expression TK_AND expression
  107            | expression TK_OR expression
  108            | TK_NOT expression

  109 compare: expression TK_GREATER expression
  110        | expression TK_GREATER_EQUAL expression
  111        | expression TK_EQUAL expression
  112        | expression TK_SMALLER expression
  113        | expression TK_SMALLEREQUAL expression
  114        | expression TK_NOTEQUAL expression


Terminals, with rules where they appear

$end (0) 0
error (256)
TK_IDENT (258) 2 9 10 14 15 19 21 23 24 59 63 64 67 68 76 77 78 79
    80 81 84 85 89 97 100
TK_INT (259) 86
TK_REAL (260) 87
TK_STRING (261) 88
TK_BOOL_TRUE (262) 90
TK_BOOL_FALSE (263) 91
TK_PLUS (264) 94 103
TK_MINUS (265) 95 104
TK_MULTIPLY (266) 105
TK_DIVIDE (267) 101
TK_DIV (268)
TK_MOD (269) 102
TK_EQUAL (270) 9 10 111
TK_NOTEQUAL (271) 114
TK_SMALLER (272) 112
TK_GREATER (273) 109
TK_SMALLEREQUAL (274) 113
TK_GREATER_EQUAL (275) 110
TK_AND (276) 106
TK_OR (277) 107
TK_NOT (278) 108
TK_LPAR (279) 19 21 73 74 75 79 80 81 96 97
TK_RPAR (280) 19 21 73 74 75 79 80 81 96 97
TK_SEMICOLON (281) 2 9 10 12 13 19 21 24 26 42 43 44 56
TK_COMMA (282) 15 85
TK_LBRACKET (283) 36 37
TK_RBRACKET (284) 36 37
TK_COLON (285) 12 13 19 23 24 67
TK_POINT (286) 28
TK_DIGIT (287) 93
TK_CHAR (288) 92
TK_ASSIGN (289) 59 60 63 64 76 77 78 79 80
KW_ARRAY (290) 34 35
KW_PROGRAM (291) 2
KW_BEGIN (292) 27 40
KW_END (293) 27 40
KW_BOOLEAN (294) 30
KW_CHAR (295) 31
KW_DO (296) 63 64 65
KW_ELSE (297) 62
KW_FOR (298) 63 64
KW_FUNCTION (299) 19
KW_GOTO (300) 68
KW_IF (301) 61
KW_INTEGER (302) 29
KW_VAR (303) 11
KW_OF (304) 34 35
KW_WHILE (305) 65
KW_PROCEDURE (306) 21
KW_REAL (307) 32
KW_REPEAT (308) 66
KW_TO (309) 63
KW_RESULT (310) 60 80
KW_RETURN (311) 69
KW_THEN (312) 61
KW_UNTIL (313) 66
KW_DOWNTO (314) 64
KW_TYPE (315) 8
KW_READSTRING (316) 76
KW_READINTEGER (317) 77
KW_READREAL (318) 78
KW_WRITESTRING (319) 73
KW_WRITEINTEGER (320) 74
KW_WRITEREAL (321) 75


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
program (68)
    on left: 1, on right: 0
program_header (69)
    on left: 2, on right: 1
program_declarations (70)
    on left: 3 4 5, on right: 1 4 5 25
declaring (71)
    on left: 6 7, on right: 4
types_declaration (72)
    on left: 8, on right: 6
program_types (73)
    on left: 9 10, on right: 8 10
variables_declaration (74)
    on left: 11, on right: 7
variables_declaration_body (75)
    on left: 12 13, on right: 11 13
identifiers (76)
    on left: 14 15, on right: 12 13 15
subroutines (77)
    on left: 16 17, on right: 5
function (78)
    on left: 18, on right: 16
function_header (79)
    on left: 19, on right: 18
procedure (80)
    on left: 20, on right: 17
procedure_header (81)
    on left: 21, on right: 20
subroutine_arguments (82)
    on left: 22 23 24, on right: 19 21 24
procedure_declarations (83)
    on left: 25, on right: 18 20
procedure_body (84)
    on left: 26, on right: 18 20
program_body (85)
    on left: 27, on right: 1
program_end (86)
    on left: 28, on right: 1
basic_data_type (87)
    on left: 29 30 31 32, on right: 33 34 35
data_type (88)
    on left: 33 34 35, on right: 9 10 12 13 19 23 24 97
brackets (89)
    on left: 36 37, on right: 34 37 100
commands (90)
    on left: 38 39, on right: 27 39
complex_command (91)
    on left: 40, on right: 26 43 44 57
command_list (92)
    on left: 41 42 43 44, on right: 39
command (93)
    on left: 45 46 47 48 49 50 51 52 53, on right: 41 42 55 56
complex_command_list (94)
    on left: 54 55 56, on right: 40 55 56
statement_commands (95)
    on left: 57 58, on right: 61 62 63 64 65 66 67
assign_command (96)
    on left: 59, on right: 45
special_assign (97)
    on left: 60, on right: 46 58
if_statement (98)
    on left: 61 62, on right: 47 62
for_loop (99)
    on left: 63 64, on right: 48
while_loop (100)
    on left: 65 66, on right: 49
label_command (101)
    on left: 67, on right: 50
goto_command (102)
    on left: 68, on right: 51
return_command (103)
    on left: 69, on right: 52
call_subroutine (104)
    on left: 70 71 72, on right: 53
default_subroutine (105)
    on left: 73 74 75 76 77 78, on right: 70
call_function (106)
    on left: 79 80, on right: 71
call_procedure (107)
    on left: 81, on right: 72
call_arguments (108)
    on left: 82 83, on right: 79 80 81
call_arguments_list (109)
    on left: 84 85, on right: 83 85
expression (110)
    on left: 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100, on right:
    36 37 59 60 61 63 64 65 66 73 74 75 94 95 96 101 102 103 104 105
    106 107 108 109 110 111 112 113 114
mathematics (111)
    on left: 101 102 103 104 105 106 107 108, on right: 98
compare (112)
    on left: 109 110 111 112 113 114, on right: 99


State 0

    0 $accept: . program $end
    1 program: . program_header program_declarations program_body program_end
    2 program_header: . KW_PROGRAM TK_IDENT TK_SEMICOLON

    KW_PROGRAM  shift, and go to state 1

    program         go to state 2
    program_header  go to state 3


State 1

    2 program_header: KW_PROGRAM . TK_IDENT TK_SEMICOLON

    TK_IDENT  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: program_header . program_declarations program_body program_end
    3 program_declarations: . %empty
    4                     | . program_declarations declaring
    5                     | . program_declarations subroutines

    $default  reduce using rule 3 (program_declarations)

    program_declarations  go to state 6


State 4

    2 program_header: KW_PROGRAM TK_IDENT . TK_SEMICOLON

    TK_SEMICOLON  shift, and go to state 7


State 5

    0 $accept: program $end .

    $default  accept


State 6

    1 program: program_header program_declarations . program_body program_end
    4 program_declarations: program_declarations . declaring
    5                     | program_declarations . subroutines
    6 declaring: . types_declaration
    7          | . variables_declaration
    8 types_declaration: . KW_TYPE program_types
   11 variables_declaration: . KW_VAR variables_declaration_body
   16 subroutines: . function
   17            | . procedure
   18 function: . function_header procedure_declarations procedure_body
   19 function_header: . KW_FUNCTION TK_IDENT TK_LPAR subroutine_arguments TK_RPAR TK_COLON data_type TK_SEMICOLON
   20 procedure: . procedure_header procedure_declarations procedure_body
   21 procedure_header: . KW_PROCEDURE TK_IDENT TK_LPAR subroutine_arguments TK_RPAR TK_SEMICOLON
   27 program_body: . KW_BEGIN commands KW_END

    KW_BEGIN      shift, and go to state 8
    KW_FUNCTION   shift, and go to state 9
    KW_VAR        shift, and go to state 10
    KW_PROCEDURE  shift, and go to state 11
    KW_TYPE       shift, and go to state 12

    declaring              go to state 13
    types_declaration      go to state 14
    variables_declaration  go to state 15
    subroutines            go to state 16
    function               go to state 17
    function_header        go to state 18
    procedure              go to state 19
    procedure_header       go to state 20
    program_body           go to state 21


State 7

    2 program_header: KW_PROGRAM TK_IDENT TK_SEMICOLON .

    $default  reduce using rule 2 (program_header)


State 8

   27 program_body: KW_BEGIN . commands KW_END
   38 commands: . %empty
   39         | . commands command_list

    $default  reduce using rule 38 (commands)

    commands  go to state 22


State 9

   19 function_header: KW_FUNCTION . TK_IDENT TK_LPAR subroutine_arguments TK_RPAR TK_COLON data_type TK_SEMICOLON

    TK_IDENT  shift, and go to state 23


State 10

   11 variables_declaration: KW_VAR . variables_declaration_body
   12 variables_declaration_body: . identifiers TK_COLON data_type TK_SEMICOLON
   13                           | . variables_declaration_body identifiers TK_COLON data_type TK_SEMICOLON
   14 identifiers: . TK_IDENT
   15            | . identifiers TK_COMMA TK_IDENT

    TK_IDENT  shift, and go to state 24

    variables_declaration_body  go to state 25
    identifiers                 go to state 26


State 11

   21 procedure_header: KW_PROCEDURE . TK_IDENT TK_LPAR subroutine_arguments TK_RPAR TK_SEMICOLON

    TK_IDENT  shift, and go to state 27


State 12

    8 types_declaration: KW_TYPE . program_types
    9 program_types: . TK_IDENT TK_EQUAL data_type TK_SEMICOLON
   10              | . program_types TK_IDENT TK_EQUAL data_type TK_SEMICOLON

    TK_IDENT  shift, and go to state 28

    program_types  go to state 29


State 13

    4 program_declarations: program_declarations declaring .

    $default  reduce using rule 4 (program_declarations)


State 14

    6 declaring: types_declaration .

    $default  reduce using rule 6 (declaring)


State 15

    7 declaring: variables_declaration .

    $default  reduce using rule 7 (declaring)


State 16

    5 program_declarations: program_declarations subroutines .

    $default  reduce using rule 5 (program_declarations)


State 17

   16 subroutines: function .

    $default  reduce using rule 16 (subroutines)


State 18

    3 program_declarations: . %empty
    4                     | . program_declarations declaring
    5                     | . program_declarations subroutines
   18 function: function_header . procedure_declarations procedure_body
   25 procedure_declarations: . program_declarations

    $default  reduce using rule 3 (program_declarations)

    program_declarations    go to state 30
    procedure_declarations  go to state 31


State 19

   17 subroutines: procedure .

    $default  reduce using rule 17 (subroutines)


State 20

    3 program_declarations: . %empty
    4                     | . program_declarations declaring
    5                     | . program_declarations subroutines
   20 procedure: procedure_header . procedure_declarations procedure_body
   25 procedure_declarations: . program_declarations

    $default  reduce using rule 3 (program_declarations)

    program_declarations    go to state 30
    procedure_declarations  go to state 32


State 21

    1 program: program_header program_declarations program_body . program_end
   28 program_end: . TK_POINT

    TK_POINT  shift, and go to state 33

    program_end  go to state 34


State 22

   27 program_body: KW_BEGIN commands . KW_END
   39 commands: commands . command_list
   40 complex_command: . KW_BEGIN complex_command_list KW_END
   41 command_list: . command
   42             | . TK_SEMICOLON command
   43             | . TK_SEMICOLON complex_command
   44             | . complex_command TK_SEMICOLON
   45 command: . assign_command
   46        | . special_assign
   47        | . if_statement
   48        | . for_loop
   49        | . while_loop
   50        | . label_command
   51        | . goto_command
   52        | . return_command
   53        | . call_subroutine
   59 assign_command: . TK_IDENT TK_ASSIGN expression
   60 special_assign: . KW_RESULT TK_ASSIGN expression
   61 if_statement: . KW_IF expression KW_THEN statement_commands
   62             | . if_statement KW_ELSE statement_commands
   63 for_loop: . KW_FOR TK_IDENT TK_ASSIGN expression KW_TO expression KW_DO statement_commands
   64         | . KW_FOR TK_IDENT TK_ASSIGN expression KW_DOWNTO expression KW_DO statement_commands
   65 while_loop: . KW_WHILE expression KW_DO statement_commands
   66           | . KW_REPEAT statement_commands KW_UNTIL expression
   67 label_command: . TK_IDENT TK_COLON statement_commands
   68 goto_command: . KW_GOTO TK_IDENT
   69 return_command: . KW_RETURN
   70 call_subroutine: . default_subroutine
   71                | . call_function
   72                | . call_procedure
   73 default_subroutine: . KW_WRITESTRING TK_LPAR expression TK_RPAR
   74                   | . KW_WRITEINTEGER TK_LPAR expression TK_RPAR
   75                   | . KW_WRITEREAL TK_LPAR expression TK_RPAR
   76                   | . TK_IDENT TK_ASSIGN KW_READSTRING
   77                   | . TK_IDENT TK_ASSIGN KW_READINTEGER
   78                   | . TK_IDENT TK_ASSIGN KW_READREAL
   79 call_function: . TK_IDENT TK_ASSIGN TK_IDENT TK_LPAR call_arguments TK_RPAR
   80              | . KW_RESULT TK_ASSIGN TK_IDENT TK_LPAR call_arguments TK_RPAR
   81 call_procedure: . TK_IDENT TK_LPAR call_arguments TK_RPAR

    TK_IDENT         shift, and go to state 35
    TK_SEMICOLON     shift, and go to state 36
    KW_BEGIN         shift, and go to state 37
    KW_END           shift, and go to state 38
    KW_FOR           shift, and go to state 39
    KW_GOTO          shift, and go to state 40
    KW_IF            shift, and go to state 41
    KW_WHILE         shift, and go to state 42
    KW_REPEAT        shift, and go to state 43
    KW_RESULT        shift, and go to state 44
    KW_RETURN        shift, and go to state 45
    KW_WRITESTRING   shift, and go to state 46
    KW_WRITEINTEGER  shift, and go to state 47
    KW_WRITEREAL     shift, and go to state 48

    complex_command     go to state 49
    command_list        go to state 50
    command             go to state 51
    assign_command      go to state 52
    special_assign      go to state 53
    if_statement        go to state 54
    for_loop            go to state 55
    while_loop          go to state 56
    label_command       go to state 57
    goto_command        go to state 58
    return_command      go to state 59
    call_subroutine     go to state 60
    default_subroutine  go to state 61
    call_function       go to state 62
    call_procedure      go to state 63


State 23

   19 function_header: KW_FUNCTION TK_IDENT . TK_LPAR subroutine_arguments TK_RPAR TK_COLON data_type TK_SEMICOLON

    TK_LPAR  shift, and go to state 64


State 24

   14 identifiers: TK_IDENT .

    $default  reduce using rule 14 (identifiers)


State 25

   11 variables_declaration: KW_VAR variables_declaration_body .  [KW_BEGIN, KW_FUNCTION, KW_VAR, KW_PROCEDURE, KW_TYPE]
   13 variables_declaration_body: variables_declaration_body . identifiers TK_COLON data_type TK_SEMICOLON
   14 identifiers: . TK_IDENT
   15            | . identifiers TK_COMMA TK_IDENT

    TK_IDENT  shift, and go to state 24

    $default  reduce using rule 11 (variables_declaration)

    identifiers  go to state 65


State 26

   12 variables_declaration_body: identifiers . TK_COLON data_type TK_SEMICOLON
   15 identifiers: identifiers . TK_COMMA TK_IDENT

    TK_COMMA  shift, and go to state 66
    TK_COLON  shift, and go to state 67


State 27

   21 procedure_header: KW_PROCEDURE TK_IDENT . TK_LPAR subroutine_arguments TK_RPAR TK_SEMICOLON

    TK_LPAR  shift, and go to state 68


State 28

    9 program_types: TK_IDENT . TK_EQUAL data_type TK_SEMICOLON

    TK_EQUAL  shift, and go to state 69


State 29

    8 types_declaration: KW_TYPE program_types .  [KW_BEGIN, KW_FUNCTION, KW_VAR, KW_PROCEDURE, KW_TYPE]
   10 program_types: program_types . TK_IDENT TK_EQUAL data_type TK_SEMICOLON

    TK_IDENT  shift, and go to state 70

    $default  reduce using rule 8 (types_declaration)


State 30

    4 program_declarations: program_declarations . declaring
    5                     | program_declarations . subroutines
    6 declaring: . types_declaration
    7          | . variables_declaration
    8 types_declaration: . KW_TYPE program_types
   11 variables_declaration: . KW_VAR variables_declaration_body
   16 subroutines: . function
   17            | . procedure
   18 function: . function_header procedure_declarations procedure_body
   19 function_header: . KW_FUNCTION TK_IDENT TK_LPAR subroutine_arguments TK_RPAR TK_COLON data_type TK_SEMICOLON
   20 procedure: . procedure_header procedure_declarations procedure_body
   21 procedure_header: . KW_PROCEDURE TK_IDENT TK_LPAR subroutine_arguments TK_RPAR TK_SEMICOLON
   25 procedure_declarations: program_declarations .  [KW_BEGIN]

    KW_FUNCTION   shift, and go to state 9
    KW_VAR        shift, and go to state 10
    KW_PROCEDURE  shift, and go to state 11
    KW_TYPE       shift, and go to state 12

    $default  reduce using rule 25 (procedure_declarations)

    declaring              go to state 13
    types_declaration      go to state 14
    variables_declaration  go to state 15
    subroutines            go to state 16
    function               go to state 17
    function_header        go to state 18
    procedure              go to state 19
    procedure_header       go to state 20


State 31

   18 function: function_header procedure_declarations . procedure_body
   26 procedure_body: . complex_command TK_SEMICOLON
   40 complex_command: . KW_BEGIN complex_command_list KW_END

    KW_BEGIN  shift, and go to state 37

    procedure_body   go to state 71
    complex_command  go to state 72


State 32

   20 procedure: procedure_header procedure_declarations . procedure_body
   26 procedure_body: . complex_command TK_SEMICOLON
   40 complex_command: . KW_BEGIN complex_command_list KW_END

    KW_BEGIN  shift, and go to state 37

    procedure_body   go to state 73
    complex_command  go to state 72


State 33

   28 program_end: TK_POINT .

    $default  reduce using rule 28 (program_end)


State 34

    1 program: program_header program_declarations program_body program_end .

    $default  reduce using rule 1 (program)


State 35

   59 assign_command: TK_IDENT . TK_ASSIGN expression
   67 label_command: TK_IDENT . TK_COLON statement_commands
   76 default_subroutine: TK_IDENT . TK_ASSIGN KW_READSTRING
   77                   | TK_IDENT . TK_ASSIGN KW_READINTEGER
   78                   | TK_IDENT . TK_ASSIGN KW_READREAL
   79 call_function: TK_IDENT . TK_ASSIGN TK_IDENT TK_LPAR call_arguments TK_RPAR
   81 call_procedure: TK_IDENT . TK_LPAR call_arguments TK_RPAR

    TK_LPAR    shift, and go to state 74
    TK_COLON   shift, and go to state 75
    TK_ASSIGN  shift, and go to state 76


State 36

   40 complex_command: . KW_BEGIN complex_command_list KW_END
   42 command_list: TK_SEMICOLON . command
   43             | TK_SEMICOLON . complex_command
   45 command: . assign_command
   46        | . special_assign
   47        | . if_statement
   48        | . for_loop
   49        | . while_loop
   50        | . label_command
   51        | . goto_command
   52        | . return_command
   53        | . call_subroutine
   59 assign_command: . TK_IDENT TK_ASSIGN expression
   60 special_assign: . KW_RESULT TK_ASSIGN expression
   61 if_statement: . KW_IF expression KW_THEN statement_commands
   62             | . if_statement KW_ELSE statement_commands
   63 for_loop: . KW_FOR TK_IDENT TK_ASSIGN expression KW_TO expression KW_DO statement_commands
   64         | . KW_FOR TK_IDENT TK_ASSIGN expression KW_DOWNTO expression KW_DO statement_commands
   65 while_loop: . KW_WHILE expression KW_DO statement_commands
   66           | . KW_REPEAT statement_commands KW_UNTIL expression
   67 label_command: . TK_IDENT TK_COLON statement_commands
   68 goto_command: . KW_GOTO TK_IDENT
   69 return_command: . KW_RETURN
   70 call_subroutine: . default_subroutine
   71                | . call_function
   72                | . call_procedure
   73 default_subroutine: . KW_WRITESTRING TK_LPAR expression TK_RPAR
   74                   | . KW_WRITEINTEGER TK_LPAR expression TK_RPAR
   75                   | . KW_WRITEREAL TK_LPAR expression TK_RPAR
   76                   | . TK_IDENT TK_ASSIGN KW_READSTRING
   77                   | . TK_IDENT TK_ASSIGN KW_READINTEGER
   78                   | . TK_IDENT TK_ASSIGN KW_READREAL
   79 call_function: . TK_IDENT TK_ASSIGN TK_IDENT TK_LPAR call_arguments TK_RPAR
   80              | . KW_RESULT TK_ASSIGN TK_IDENT TK_LPAR call_arguments TK_RPAR
   81 call_procedure: . TK_IDENT TK_LPAR call_arguments TK_RPAR

    TK_IDENT         shift, and go to state 35
    KW_BEGIN         shift, and go to state 37
    KW_FOR           shift, and go to state 39
    KW_GOTO          shift, and go to state 40
    KW_IF            shift, and go to state 41
    KW_WHILE         shift, and go to state 42
    KW_REPEAT        shift, and go to state 43
    KW_RESULT        shift, and go to state 44
    KW_RETURN        shift, and go to state 45
    KW_WRITESTRING   shift, and go to state 46
    KW_WRITEINTEGER  shift, and go to state 47
    KW_WRITEREAL     shift, and go to state 48

    complex_command     go to state 77
    command             go to state 78
    assign_command      go to state 52
    special_assign      go to state 53
    if_statement        go to state 54
    for_loop            go to state 55
    while_loop          go to state 56
    label_command       go to state 57
    goto_command        go to state 58
    return_command      go to state 59
    call_subroutine     go to state 60
    default_subroutine  go to state 61
    call_function       go to state 62
    call_procedure      go to state 63


State 37

   40 complex_command: KW_BEGIN . complex_command_list KW_END
   54 complex_command_list: . %empty
   55                     | . complex_command_list command
   56                     | . complex_command_list TK_SEMICOLON command

    $default  reduce using rule 54 (complex_command_list)

    complex_command_list  go to state 79


State 38

   27 program_body: KW_BEGIN commands KW_END .

    $default  reduce using rule 27 (program_body)


State 39

   63 for_loop: KW_FOR . TK_IDENT TK_ASSIGN expression KW_TO expression KW_DO statement_commands
   64         | KW_FOR . TK_IDENT TK_ASSIGN expression KW_DOWNTO expression KW_DO statement_commands

    TK_IDENT  shift, and go to state 80


State 40

   68 goto_command: KW_GOTO . TK_IDENT

    TK_IDENT  shift, and go to state 81


State 41

   61 if_statement: KW_IF . expression KW_THEN statement_commands
   86 expression: . TK_INT
   87           | . TK_REAL
   88           | . TK_STRING
   89           | . TK_IDENT
   90           | . TK_BOOL_TRUE
   91           | . TK_BOOL_FALSE
   92           | . TK_CHAR
   93           | . TK_DIGIT
   94           | . TK_PLUS expression
   95           | . TK_MINUS expression
   96           | . TK_LPAR expression TK_RPAR
   97           | . TK_LPAR data_type TK_RPAR TK_IDENT
   98           | . mathematics
   99           | . compare
  100           | . TK_IDENT brackets
  101 mathematics: . expression TK_DIVIDE expression
  102            | . expression TK_MOD expression
  103            | . expression TK_PLUS expression
  104            | . expression TK_MINUS expression
  105            | . expression TK_MULTIPLY expression
  106            | . expression TK_AND expression
  107            | . expression TK_OR expression
  108            | . TK_NOT expression
  109 compare: . expression TK_GREATER expression
  110        | . expression TK_GREATER_EQUAL expression
  111        | . expression TK_EQUAL expression
  112        | . expression TK_SMALLER expression
  113        | . expression TK_SMALLEREQUAL expression
  114        | . expression TK_NOTEQUAL expression

    TK_IDENT       shift, and go to state 82
    TK_INT         shift, and go to state 83
    TK_REAL        shift, and go to state 84
    TK_STRING      shift, and go to state 85
    TK_BOOL_TRUE   shift, and go to state 86
    TK_BOOL_FALSE  shift, and go to state 87
    TK_PLUS        shift, and go to state 88
    TK_MINUS       shift, and go to state 89
    TK_NOT         shift, and go to state 90
    TK_LPAR        shift, and go to state 91
    TK_DIGIT       shift, and go to state 92
    TK_CHAR        shift, and go to state 93

    expression   go to state 94
    mathematics  go to state 95
    compare      go to state 96


State 42

   65 while_loop: KW_WHILE . expression KW_DO statement_commands
   86 expression: . TK_INT
   87           | . TK_REAL
   88           | . TK_STRING
   89           | . TK_IDENT
   90           | . TK_BOOL_TRUE
   91           | . TK_BOOL_FALSE
   92           | . TK_CHAR
   93           | . TK_DIGIT
   94           | . TK_PLUS expression
   95           | . TK_MINUS expression
   96           | . TK_LPAR expression TK_RPAR
   97           | . TK_LPAR data_type TK_RPAR TK_IDENT
   98           | . mathematics
   99           | . compare
  100           | . TK_IDENT brackets
  101 mathematics: . expression TK_DIVIDE expression
  102            | . expression TK_MOD expression
  103            | . expression TK_PLUS expression
  104            | . expression TK_MINUS expression
  105            | . expression TK_MULTIPLY expression
  106            | . expression TK_AND expression
  107            | . expression TK_OR expression
  108            | . TK_NOT expression
  109 compare: . expression TK_GREATER expression
  110        | . expression TK_GREATER_EQUAL expression
  111        | . expression TK_EQUAL expression
  112        | . expression TK_SMALLER expression
  113        | . expression TK_SMALLEREQUAL expression
  114        | . expression TK_NOTEQUAL expression

    TK_IDENT       shift, and go to state 82
    TK_INT         shift, and go to state 83
    TK_REAL        shift, and go to state 84
    TK_STRING      shift, and go to state 85
    TK_BOOL_TRUE   shift, and go to state 86
    TK_BOOL_FALSE  shift, and go to state 87
    TK_PLUS        shift, and go to state 88
    TK_MINUS       shift, and go to state 89
    TK_NOT         shift, and go to state 90
    TK_LPAR        shift, and go to state 91
    TK_DIGIT       shift, and go to state 92
    TK_CHAR        shift, and go to state 93

    expression   go to state 97
    mathematics  go to state 95
    compare      go to state 96


State 43

   40 complex_command: . KW_BEGIN complex_command_list KW_END
   57 statement_commands: . complex_command
   58                   | . special_assign
   60 special_assign: . KW_RESULT TK_ASSIGN expression
   66 while_loop: KW_REPEAT . statement_commands KW_UNTIL expression

    KW_BEGIN   shift, and go to state 37
    KW_RESULT  shift, and go to state 98

    complex_command     go to state 99
    statement_commands  go to state 100
    special_assign      go to state 101


State 44

   60 special_assign: KW_RESULT . TK_ASSIGN expression
   80 call_function: KW_RESULT . TK_ASSIGN TK_IDENT TK_LPAR call_arguments TK_RPAR

    TK_ASSIGN  shift, and go to state 102


State 45

   69 return_command: KW_RETURN .

    $default  reduce using rule 69 (return_command)


State 46

   73 default_subroutine: KW_WRITESTRING . TK_LPAR expression TK_RPAR

    TK_LPAR  shift, and go to state 103


State 47

   74 default_subroutine: KW_WRITEINTEGER . TK_LPAR expression TK_RPAR

    TK_LPAR  shift, and go to state 104


State 48

   75 default_subroutine: KW_WRITEREAL . TK_LPAR expression TK_RPAR

    TK_LPAR  shift, and go to state 105


State 49

   44 command_list: complex_command . TK_SEMICOLON

    TK_SEMICOLON  shift, and go to state 106


State 50

   39 commands: commands command_list .

    $default  reduce using rule 39 (commands)


State 51

   41 command_list: command .

    $default  reduce using rule 41 (command_list)


State 52

   45 command: assign_command .

    $default  reduce using rule 45 (command)


State 53

   46 command: special_assign .

    $default  reduce using rule 46 (command)


State 54

   47 command: if_statement .  [TK_IDENT, TK_SEMICOLON, KW_BEGIN, KW_END, KW_FOR, KW_GOTO, KW_IF, KW_WHILE, KW_REPEAT, KW_RESULT, KW_RETURN, KW_WRITESTRING, KW_WRITEINTEGER, KW_WRITEREAL]
   62 if_statement: if_statement . KW_ELSE statement_commands

    KW_ELSE  shift, and go to state 107

    $default  reduce using rule 47 (command)


State 55

   48 command: for_loop .

    $default  reduce using rule 48 (command)


State 56

   49 command: while_loop .

    $default  reduce using rule 49 (command)


State 57

   50 command: label_command .

    $default  reduce using rule 50 (command)


State 58

   51 command: goto_command .

    $default  reduce using rule 51 (command)


State 59

   52 command: return_command .

    $default  reduce using rule 52 (command)


State 60

   53 command: call_subroutine .

    $default  reduce using rule 53 (command)


State 61

   70 call_subroutine: default_subroutine .

    $default  reduce using rule 70 (call_subroutine)


State 62

   71 call_subroutine: call_function .

    $default  reduce using rule 71 (call_subroutine)


State 63

   72 call_subroutine: call_procedure .

    $default  reduce using rule 72 (call_subroutine)

